minor style fixed to dropdown select

--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -35,7 +35,8 @@
 
       fo-icon.arrow {
         font-size: 1.5em;
-        margin-right: 0.4em;
+        margin-right: 0.15em;
+        line-height: 1em;
       }
 
       div#selectedValue {
