--- a/lib/components/fo_tab/_mixins.scss
+++ b/lib/components/fo_tab/_mixins.scss
@@ -8,3 +8,13 @@
     }
   }
 }
+
+@mixin fo-tab-panel-vertical-padding($top, $bottom) {
+  ::ng-deep fo-tab-panel {
+    div#tabStrip {
+      div.tabButton {
+        padding: $bottom !important $bottom !important;
+      }
+    }
+  }
+}
