removed anchorRight and improved positioning logic

--- a/lib/components/fo_dropdown/fo_dropdown_component.scss
+++ b/lib/components/fo_dropdown/fo_dropdown_component.scss
@@ -7,7 +7,7 @@
   z-index: 99;
 
   div#fixer {
-    position: fixed;
+    position: absolute;
     transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
