made panel close button look better

--- a/lib/components/fo_panel/fo_panel_component.html
+++ b/lib/components/fo_panel/fo_panel_component.html
@@ -2,8 +2,7 @@
      *ngIf="visible">
   <div id="panelHeader">
     <h3>{{header | capitalize}}</h3>
-    <fo-button dense
-               white               
+    <fo-button white
                icon="close"
                (trigger)="onClose()">
     </fo-button>
