--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -47,6 +47,7 @@
       }
       textarea.error {
         color: $alertColor;
+        border-color: $alertColor;
       }
 
       textarea::placeholder {
