Fixed datatable::dropdownSelect overflow issue (1.7.2+3)

--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -12,6 +12,12 @@
   width: 100%;
   color: #555;
 
+  div.row {
+    div.col.overflow {
+      overflow: visible;
+    }
+  }
+
   fo-text-input {
     font-size: 0.8rem;
   }
