--- a/lib/components/fo_text_input/_mixins.scss
+++ b/lib/components/fo_text_input/_mixins.scss
@@ -27,6 +27,11 @@
         span.leadingText {
           color: $borderColor;
         }
+        fo-button#actionButton {
+          fo-icon {
+            color: white;
+          }
+        }
       }
       div#flexContainer.error {
         border-color: $alertColor;
