--- a/lib/components/fo_quiz/fo_quiz_component.html
+++ b/lib/components/fo_quiz/fo_quiz_component.html
@@ -1,5 +1,9 @@
 <fo-question [model]="activeQuestion"
              [disabled]="disabled"
              [buttonColor]="buttonColor"
+             [buttonColorActive]="buttonColorActive"
+             [prevButtonLabel]="prevButtonLabel"
+             [nextButtonLabel]="nextButtonLabel"
+             (prev)="onQuestionPrev($event)"
              (done)="onQuestionDone($event)">
 </fo-question>
