--- a/lib/components/fo_quiz/fo_question_component.scss
+++ b/lib/components/fo_quiz/fo_question_component.scss
@@ -1,25 +1,20 @@
-@import 'package:grid_css/constants';
-@import '../fo_button/mixins';
+@import "package:grid_css/constants";
+@import "../fo_button/mixins";
 
 :host {
   display: block;
 
   div.container {
-    padding: 0 $large;
-
     div.transition {
-      transition: all 500ms ease;
-      -webkit-transition: all 500ms ease;
+      transition: opacity 500ms ease;
+      -webkit-transition: opacity 500ms ease;
     }
 
     div.questionContainer {
+      margin: 2em 0 3em 0;
       h3.question {
-        color: #555;
-        border: 1px solid #eee;
-        padding: $large;
+        color: #333;
         margin: 0;
-        border-radius: $small;
-        -webkit-border-radius: $small;
         text-align: center;
       }
 
@@ -28,31 +23,31 @@
     }
 
     div.questionContainer.is-hidden {
-      transform: translateX(-$large);
       opacity: 0;
     }
 
     div.answerContainer {
       opacity: 1;
-
       div.answer {
         text-align: center;
-        padding: $medium 0;
       }
     }
 
     div.answerContainer.is-hidden {
-      transform: translateX($large);
       opacity: 0;
     }
   }
 
-  div#nextButtonContainer {
-    fo-button {
-      font-size: 0.7rem;
+  div#stepButtons {
+    margin-top: 2em;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    div#left {
+      width: 70px;
     }
-
-    margin-top: $small;
-    text-align: center;
+    div#right {
+      width: 70px;
+    }
   }
 }
