style: minor adjustment to foTextInput height

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -23,10 +23,9 @@
     input {
       @include inputStyle;
       padding: 0.5em 0.25em;
-      line-height: 150%;
+      line-height: 149%;
       outline: none;
-      margin: 0;
-      align-self: stretch;
+      margin: -1px 0; // compensate for border
       border: 0;
     }
 
