--- a/lib/components/fo_number_input/fo_number_input_component.scss
+++ b/lib/components/fo_number_input/fo_number_input_component.scss
@@ -9,7 +9,7 @@
 
   div#flexContainer {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     height: 100%;
 
