--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -8,6 +8,7 @@
                     [showSearch]="showSearch"
                     [actionButtonLabel]="msgAdd | capitalize"
                     [materialIcons]="materialIcons"
+                    [dropdownMaxHeight]="dropdownMaxHeight"
                     [constrainToViewPort]="constrainToViewPort"
                     (actionButtonTrigger)="onAdd(selectedId)"
                     [(selectedId)]="selectedId"></fo-dropdown-select>
