--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -14,7 +14,7 @@
     <fo-text-input [autoFocus]="visible"
                    [attr.square]="square"
                    noFocusShadow
-                   [label]="msgFilter | capitalize"
+                   [placeholder]="msgFilter | capitalize"
                    dense
                    [ngModel]="filter"
                    (ngModelChange)="updateFilteredOptions($event)">
