--- a/lib/components/fo_dropdown/fo_dropdown_component.scss
+++ b/lib/components/fo_dropdown/fo_dropdown_component.scss
@@ -16,6 +16,7 @@
     box-sizing: content-box;
     border-width: 1px;
     border-style: solid;
+    border-color: transparent;
     height: 0;
     opacity: 0;
     overflow: hidden;
