feat-edit: class visible

--- a/lib/components/fo_dropdown/fo_dropdown_component.html
+++ b/lib/components/fo_dropdown/fo_dropdown_component.html
@@ -3,6 +3,7 @@
      [style.left]="left"
      [style.height]="height"
      [style.opacity]="opacity"
+     [class.visible]="visible"
      (click)="$event.stopPropagation()">
   <div id="dropdownContent"
        [style.width]="elementWidth"
