--- a/lib/components/fo_button/_mixins.scss
+++ b/lib/components/fo_button/_mixins.scss
@@ -9,6 +9,15 @@
   }
 }
 
+@mixin fo-button-horizontal-padding($value) {
+  ::ng-deep fo-button {
+    button.themeable {
+      padding-left: $value;
+      padding-right: $value;
+    }
+  }
+}
+
 @mixin fo-button-colors($color, $backgroundColor, $backgroundColorDisabled) {
   // Default
   ::ng-deep fo-button:not([white]) > button {
