--- a/lib/components/fo_file_upload/fo_file_upload_component.scss
+++ b/lib/components/fo_file_upload/fo_file_upload_component.scss
@@ -1,21 +1,20 @@
-@import "package:grid_css/constants";
 @import "../../mixins";
 
 :host {
   div.container {
     border-width: 1px;
     border-style: dashed;
-    padding: $small;
+    padding: 0.5rem;
     text-align: center;
     input {
       display: none;
     }
     p {
-      margin: $small 0;
+      margin: 0.5rem 0;
     }
     material-icon {
       cursor: pointer;
-      margin-left: $x-small;
+      margin-left: 0.25rem;
     }
   }
 }
