--- a/lib/components/fo_text_input/fo_error_output_component.scss
+++ b/lib/components/fo_text_input/fo_error_output_component.scss
@@ -1,5 +1,3 @@
-@import "package:grid_css/constants";
-
 :host {
   display: block;
   position: absolute;
@@ -9,7 +7,7 @@
   background-color: white;
   border-width: 1px;
   border-style: solid;
-  border-radius: $x-small;
+  border-radius: 0.25rem;
   border-color: #cdd2d9;
   font-size: 1em;
   box-sizing: border-box;
@@ -32,7 +30,7 @@
   }
 
   div#message {
-    padding: $medium;
+    padding: 1rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
