--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -1,5 +1,3 @@
-@import "../fo_button/mixins";
-
 $slideTransitionSpeed: 200ms;
 
 :host {
@@ -11,6 +9,9 @@ $slideTransitionSpeed: 200ms;
 
   .arrow {
     cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
     position: absolute;
     display: flex;
     align-items: center;
@@ -20,7 +21,7 @@ $slideTransitionSpeed: 200ms;
     width: 56px;
     height: 56px;
     background-color: white;
-    border: 1px solid #dde2e9;
+    border: 1px solid white;
     text-align: center;
     box-sizing: border-box;
     -webkit-transform: translateY(50%);
@@ -35,11 +36,22 @@ $slideTransitionSpeed: 200ms;
     transition: background-color 200ms;
   }
 
-  .arrow.faded {
-    visibility: hidden;
+  .arrow.below {
+    display: inline-flex;
+    width: 50%;
+    position: relative;
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transorm: none;
+    -o-transform: none;
   }
 
-  .arrow:hover {
+  .arrow.disabled {
+    color: #d2e1e7;
+  }
+
+  .arrow:not(.disabled):hover {
     background-color: #f8f9fa;
     border-color: #cdd2d9;
   }
@@ -52,12 +64,6 @@ $slideTransitionSpeed: 200ms;
   #arrow-right {
     left: auto;
     right: 0;
-  }
-
-  @media screen and (max-width: 1099) {
-    .arrow {
-      display: none;
-    }
   }
 
   #slide-container {
@@ -73,10 +79,9 @@ $slideTransitionSpeed: 200ms;
     }
 
     #slide-transformer {
-      white-space: nowrap;
-      ::ng-deep * {
-        white-space: initial;
-      }
+      flex-wrap: nowrap;
+      display: flex;
+      align-items: center;
     }
   }
 }
