--- a/lib/components/fo_text_input/fo_textarea_input_component.scss
+++ b/lib/components/fo_text_input/fo_textarea_input_component.scss
@@ -24,6 +24,10 @@
     resize: none;
   }
 
+  textarea:disabled {
+    background-color: white;
+  }
+
   textarea,
   textarea:focus {
     font-size: 1em;
