feat-edit: NumberInput inputMode

--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -17,6 +17,8 @@
                  noLeftBorder
                  centerValue
                  noFocusShadow
+                 pattern="[0-9]*"
+                 inputmode="numeric"
                  [attr.tabindex]="tabIndex"
                  [attr.square]="square"
                  [disabled]="disabled"
