--- a/lib/components/fo_image_file/fo_image_file_component.scss
+++ b/lib/components/fo_image_file/fo_image_file_component.scss
@@ -3,35 +3,45 @@
 
 :host {
   div.container {
-    border-width: 1px;
+    cursor: pointer;
+    position: relative;
     border-style: dashed;
-    padding: 1rem;
+    border-width: 0;
+    box-sizing: border-box;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    transition: background-color 200ms ease;
+    -webkit-transition: background-color 200ms ease;
 
-    div.image {
-      position: relative;
+    div#image {
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      background-size: cover;
+      background-position: center center;
+    }
 
-      img {
-        width: 100%;
-        height: auto;
-        margin: 0 auto;
-      }
-
-      @include fo-button-vertical-padding(0.2rem);
-
-      fo-button.delete {
-        position: absolute;
-        top: 0.5rem;
-        right: 0.5rem;
-      }
+    fo-icon#delete {
+      z-index: 2;
+      font-size: 16px;
+      position: absolute;
+      top: 1px;
+      right: 1px;
+      width: 24px;
+      height: 24px;
+      background-color: white;
+      align-items: center;
+      justify-content: center;
     }
 
     fo-icon.add {
-      cursor: pointer;
       font-size: 3em;
     }
 
@@ -52,5 +62,11 @@
       padding: 1rem;
       margin: 1rem 0 0 0;
     }
+  }
+  div.container.border {
+    border-width: 1px;
+  }
+  div.container:hover {
+    background-color: white;
   }
 }
