bugfix: only include textInput dropdown if options != null

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -37,7 +37,8 @@
   <fo-error-output *ngIf="(hasFocus == true || hideErrorsOnBlur == false) && errorMessage != null && control?.pristine != true && dropdownVisible == false"
                    [message]="errorMessage">
   </fo-error-output>
-  <fo-dropdown-list [options]="options"
+  <fo-dropdown-list *ngIf="options != null"
+                    [options]="options"
                     [showCategoryLabels]="showDropdownCategoryLabels"
                     [offsetTop]="null"
                     [attr.noShadow]="noFocusShadow"
