--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -29,6 +29,7 @@
                   [attr.noShadow]="noFocusShadow"
                   [attr.square]="square"
                   [options]="options"
+                  [offsetTop]="dropdownTopOffset"
                   [showSearch]="showSearch"
                   [maxHeight]="dropdownMaxHeight"
                   [showCategoryLabels]="showDropdownCategoryLabels"
