--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -40,7 +40,7 @@
   <fo-dropdown-list *ngIf="options != null"
                     [options]="options"
                     [showCategoryLabels]="showDropdownCategoryLabels"
-                    [offsetTop]="null"
+                    [offsetTop]="dropdownTopOffset"
                     [attr.noShadow]="noFocusShadow"
                     [attr.square]="square"
                     [filter]="filterValue"
