--- a/lib/components/fo_image_file/fo_image_file_component.scss
+++ b/lib/components/fo_image_file/fo_image_file_component.scss
@@ -24,10 +24,9 @@
       width: 100%;
       height: 100%;
       z-index: 1;
-      background-size: cover;
+      background-size: contain;
       background-position: center center;
     }
-
     fo-icon#delete {
       z-index: 2;
       font-size: 16px;
@@ -68,5 +67,12 @@
   }
   div.container:hover {
     background-color: white;
+  }
+}
+:host[cover] {
+  div.container {
+    div#image {
+      background-size: cover;
+    }
   }
 }
