bugfix: ImageFile repeated background

--- a/lib/components/fo_image_file/fo_image_file_component.scss
+++ b/lib/components/fo_image_file/fo_image_file_component.scss
@@ -27,6 +27,7 @@
       z-index: 1;
       background-size: contain;
       background-position: center center;
+      background-repeat: no-repeat;
     }
     fo-icon#delete {
       z-index: 2;
