style: aligned textInput and DropdownSelect sizes better

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -26,7 +26,7 @@
       padding: 0.5em 0.25em;
       line-height: 160%;
       outline: none;
-      margin: -2px 0; // compensate for border
+      margin: 0;
       border: 0;
     }
 
