--- a/lib/components/fo_modal/_mixins.scss
+++ b/lib/components/fo_modal/_mixins.scss
@@ -33,7 +33,8 @@
             margin-right: $horizontal;
           }
         }
-        div#modalMain {
+        div#modalMain,
+        div#modalFooter {
           padding-left: $horizontal !important;
           padding-right: $horizontal !important;
         }
